# MCP

./: .env.example  .gitignore  CLAUDE.md  FlowForge_Blog_Post.docx  README.md  docker-compose.yml  pyproject.toml
.agents/workflows/: diagnose-pipeline.md  multi-agent-deploy.md  multi-agent-incident.md
dashboard/: index.html  package-lock.json  package.json
dashboard/src/: App.css  App.jsx  index.css
data/init/mongodb/: 01_init.js
data/init/postgres/: 01_schema.sql
flowforge/: __init__.py  api_server.py  cli.py  config.py  data_generator.py
flowforge/agents/: __init__.py  builder.py  healer.py  migration.py  monitor.py  optimizer.py  orchestrator.py  quality.py
flowforge/agents/shared/: __init__.py  base.py  llm_client.py  memory.py
flowforge/servers/: __init__.py  flink_mcp.py  kafka_mcp.py  mongodb_mcp.py  postgres_mcp.py
scripts/: demo.sh  seed_demo.py  start_all.sh  start_mlx.sh  stop_all.sh
skills/cdc-ingestion/: SKILL.md
skills/schema-evolution/: SKILL.md
skills/window-aggregation/: SKILL.md
tasks/: lessons.md  todo.md
